Adicionando menu de acessibilidade

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -29,3 +29,7 @@ $column-gap: 10px !default;
 $column-gap-md: 5px !default;
 $column-gap-sm: 2px !default;
 $column-gap-xs: 1px !default;
+
+
+$contraste-font-color: #ff0;
+$contraste-background-color: #000;
