--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -14,6 +14,9 @@
   {% block styles %}{% endblock %}
 </head>
 <body>
+  <!-- Accessibility -->
+  {% include "src/views/partials/accessibility.html" %}
+
   <!-- Header -->
   {% include "src/views/partials/header.html" %}
 
