--- a/src/views/pages/home/secoes/constituicao-federal/_constituicao-federal.scss
+++ b/src/views/pages/home/secoes/constituicao-federal/_constituicao-federal.scss
@@ -1,5 +1,11 @@
+@import '@styles/abstracts/_variables.scss';
+
 #constituicao-federal {
   background: #c0dff5;
+
+  body.contraste & {
+    background: $contraste-background-color;
+  }
 
   .text {
     p {
