--- a/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.scss
+++ b/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.scss
@@ -1,3 +1,5 @@
+@import '@styles/abstracts/_variables.scss';
+
 $cor-inscritos: #2e2e82;
 $cor-candidatos: #af89b1;
 $cor-aprovados: #656262;
@@ -6,6 +8,10 @@ $cor-por-ramo: #73ade0;
 
 #dados-do-concurso {
   background: #f5f5f5;
+
+  body.contraste & {
+    background: $contraste-background-color;
+  }
 
   .owl-carousel .owl-stage-outer,
   .owl-carousel .owl-stage {
@@ -42,6 +48,10 @@ $cor-por-ramo: #73ade0;
     padding: 20px 50px;
     border: 1px solid #7f2a7e;
     border-radius: 50px;
+
+    body.contraste & {
+      border-color: $contraste-font-color;
+    }
 
     .data {
       margin-bottom: 20px;
