--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
@@ -1,5 +1,11 @@
+@import '@styles/abstracts/_variables.scss';
+
 #questoes-da-prova {
   background: #f5f5f5;
+
+  body.contraste & {
+    background: $contraste-background-color;
+  }
 
   .align-wrapper {
     justify-content: flex-start;
@@ -10,6 +16,10 @@
   .prova{
     border: 1px solid #333380;
     border-radius: 20px;
+
+    body.contraste & {
+      border-color: $contraste-font-color;
+    }
   }
   .questoes{
     margin: 0;
@@ -30,6 +40,10 @@
       text-align: center;
       -webkit-border-radius: 20px 0 0 0;
       border-radius: 20px 0 0 0;
+
+      body.contraste & {
+        background: $contraste-background-color;
+      }
     }
     strong{
       color: #ffffff;
@@ -79,10 +93,14 @@
     color: #333;
     border: 1px solid #333380;
     overflow: hidden;
-
     flex: 1;
     display: flex;
     flex-direction: column;
+
+    body.contraste & {
+      background: $contraste-background-color;
+      border-color: $contraste-font-color;
+    }
 
     #quiz {
       display: flex;
@@ -98,6 +116,10 @@
       flex-direction: row;
       align-items: center;
       color: #fff;
+
+      body.contraste & {
+        border-bottom: 1px solid $contraste-font-color;
+      }
 
       .resultado {
         font-weight: bold;
@@ -124,6 +146,10 @@
         padding: 20px 30px;
         background: #333380;
         font-weight: bold;
+
+        body.contraste & {
+          background: $contraste-background-color;
+        }
       }
 
       div:not(.resultado) {
@@ -133,6 +159,10 @@
         align-items: center;
         background: #7d2b8a;
         padding: 0 25px;
+
+        body.contraste & {
+          background: $contraste-background-color;
+        }
       }
 
       .enunciado {
@@ -185,6 +215,10 @@
     border-radius: 20px;
     border: 1px solid #333380;
     cursor: pointer;
+
+    body.contraste & {
+      border-color: $contraste-font-color;
+    }
   }
 
   button:hover {
