--- a/src/assets/styles/abstracts/_icons.scss
+++ b/src/assets/styles/abstracts/_icons.scss
@@ -52,7 +52,7 @@ $icons: (
     font-variant: normal;
     text-transform: none;
     line-height: 1;
-    font-size: 20px;
+    font-size: 2.0rem;
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
