--- a/src/assets/styles/abstracts/_mixins.scss
+++ b/src/assets/styles/abstracts/_mixins.scss
@@ -12,7 +12,7 @@
     font-variant: normal;
     text-transform: none;
     line-height: 1;
-    font-size: 20px;
+    font-size: 2.0rem;
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
