--- a/src/assets/styles/pages/_default-layout.scss
+++ b/src/assets/styles/pages/_default-layout.scss
@@ -49,7 +49,7 @@ body {
           opacity: .8;
         }
         i:before {
-          font-size: 23px;
+          font-size: 2.3rem;
           color: #FFF;
         }
       }
@@ -135,7 +135,7 @@ header {
         align-items: center;
         justify-content: center;
         color: #333380;
-        font-size: 18px;
+        font-size: 1.8rem;
         font-weight: bold;
       }
     }
@@ -191,14 +191,14 @@ footer {
           color: #FFF;
 
           h3 {
-            font-size: 18px;
+            font-size: 1.8rem;
             display: block;
             margin: 0;
           }
 
           p {
             display: block;
-            font-size: 16px;
+            font-size: 1.6rem;
             margin-top: 30px;
 
             strong,
@@ -234,7 +234,7 @@ footer {
         gap: 50px;
 
         strong {
-          font-size: 25px;
+          font-size: 2.5rem;
           color: #FFF;
         }
 
@@ -262,7 +262,7 @@ footer {
               }
 
               &:before {
-                font-size: 30px !important;
+                font-size: 3.0rem !important;
                 color: #FFF;
               }
             }
