--- a/src/views/pages/home/home.scss
+++ b/src/views/pages/home/home.scss
@@ -19,7 +19,7 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
     margin-bottom: 30px;
     color: #f5f5f5;
     h2 {
-      font-size: 30px;
+      font-size: 3.0rem;
       font-weight: bolder;
       line-height: normal;
       display: block;
@@ -27,7 +27,7 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
     }
 
     p {
-      font-size: 23px;
+      font-size: 2.3rem;
       display: block;
       margin: 0;
       line-height: normal;
@@ -51,7 +51,7 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
     gap: 10px;
 
     &:before {
-      font-size: 50px;
+      font-size: 5.0rem;
     }
   }
 
@@ -113,7 +113,7 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
 
     i:before {
       color: #FFF;
-      font-size: 70px;
+      font-size: 7.0rem;
     }
   }
 
@@ -143,21 +143,21 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
 
       strong {
         color: #84c0eb;
-        font-size: 23px;
+        font-size: 2.3rem;
         display: block;
         margin-bottom: 10px;
         line-height: normal;
       }
 
       span {
-        font-size: 18px;
+        font-size: 1.8rem;
         line-height: normal;
         color: #f5f5f5;
       }
 
       p {
         margin: 0;
-        font-size: 16px;
+        font-size: 1.6rem;
         line-height: normal;
         color: #f5f5f5;
       }
@@ -172,7 +172,7 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
 
     p {
       margin: 0;
-      font-size: 16px;
+      font-size: 1.6rem;
       line-height: normal;
       color: #f5f5f5;
     }
@@ -189,7 +189,7 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
 
 button {
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 1.6rem;
   cursor: pointer;
 }
 
