--- a/src/views/pages/home/secoes/constituicao-federal/_constituicao-federal.scss
+++ b/src/views/pages/home/secoes/constituicao-federal/_constituicao-federal.scss
@@ -9,7 +9,7 @@
 
   .text {
     p {
-      font-size: 25px;
+      font-size: 2.5rem;
       display: block;
       margin: 30px 0 0;
       color: #333380;
