--- a/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.scss
+++ b/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.scss
@@ -48,7 +48,7 @@
       }
 
       p {
-        font-size: 23px;
+        font-size: 2.3rem;
         color: #FFF;
         line-height: normal;
         margin: 0;
