--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
@@ -21,7 +21,7 @@
       margin-bottom: 30px;
 
       i:before {
-        font-size: 25px;
+        font-size: 2.5rem;
       }
     }
     h2{
@@ -44,7 +44,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 30px;
+      gap: 34px;
       position: relative;
 
       &:first-child {
@@ -117,7 +117,7 @@
         padding: 10px 20px;
         border-radius: 50px;
         text-align: center;
-        font-size: 16px;
+        font-size: 1.6rem;
         color: #333380;
         line-height: normal;
         position: relative;
@@ -169,7 +169,7 @@
       }
 
       .etapa {
-        height: 226px;
+        height: 230px;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -189,7 +189,7 @@
         }
 
         strong {
-          font-size: 40px;
+          font-size: 4.0rem;
           line-height: normal;
           color: #a3d0f0;
           display: block;
