--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
@@ -35,7 +35,7 @@
       padding: 10px 20px;
       width: 10%;
       float: left;
-      font-size: 40px;
+      font-size: 4.0rem;
       font-weight: bold;
       text-align: center;
       -webkit-border-radius: 20px 0 0 0;
@@ -123,7 +123,7 @@
 
       .resultado {
         font-weight: bold;
-        font-size: 18px;
+        font-size: 1.8rem;
         text-align: center;
         display: block;
         flex: 1;
@@ -142,7 +142,7 @@
       }
 
       .index {
-        font-size: 40px;
+        font-size: 4.0rem;
         padding: 20px 30px;
         background: #333380;
         font-weight: bold;
@@ -166,7 +166,7 @@
       }
 
       .enunciado {
-        font-size: 20px;
+        font-size: 2.0rem;
         flex: 1;
         font-weight: bold;
       }
@@ -266,7 +266,7 @@
   #devolutiva {
     color: #333380;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1.8rem;
     text-align: center;
     display: block;
     flex: 1;
