--- a/src/views/pages/home/secoes/inicio/_inicio.scss
+++ b/src/views/pages/home/secoes/inicio/_inicio.scss
@@ -5,29 +5,12 @@
   justify-content: center;
   position: relative;
   background: #000;
-  //max-height: 72dvh;
+  cursor: pointer;
 
 
   &:hover #custom-controls {
     opacity: 1;
   }
-  //.video-preview {
-  //  width: 100%;
-  //  flex: 1;
-  //  position: relative;
-  //
-  //  iframe {
-  //    width: 100%;
-  //    display: block;
-  //    height: 100%;
-  //    position: absolute;
-  //    top: 0;
-  //    left: 0;
-  //    width: 100%;
-  //    height: 100%;
-  //  }
-  //}
-
 
   #custom-video-container {
     position: relative;
@@ -38,6 +21,7 @@
     pointer-events: none;
     overflow: hidden;
     aspect-ratio: 16 / 9;
+
 
     #youtube-player {
       width: 100%;
